# flow-matching-editing

./: .gitignore  fm.ipynb  fm.py  pyproject.toml  slope.ipynb  test_editing.ipynb  test_editing.py  train.py  train_editing.py  unet-old.py  unet-old2.py  vae.ipynb
models/: fm.py  fmfe.py  unet.py  unet_cond.py  vae.py
