[project]
name = "mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "diffusers>=0.32.2",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipython>=9.0.1",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchode>=1.0.0",
    "torchvision>=0.21.0",
]
